crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_use_before_binding.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
invalid extern function signature: dimension variable `D` is used in a compound form in parameter `x` before any parameter binds it as a bare variable
    Diagnostic severity: error
Begin snippet for extern_use_before_binding.gcl starting at line 2, column 1

snippet line 2: import plugin "graphcal:demo" as demo {
snippet line 3:     fn sq<D: Dim>(x: D^2) -> D;
    label at line 3, columns 5 to 31: invalid signature
snippet line 4: }
diagnostic help: extern signatures support Bool, Int, quantity types, arrays of quantities over one or more declared index variables, and record struct returns with concrete fields; each dimension variable must be declared in the `<...>` binder list and bound by a bare quantity parameter or bare array element before compound uses, and every result axis must reuse an index variable that indexes some parameter
diagnostic code: graphcal::P001
