crates/graphcal-eval/tests/snapshots/error_snapshots__error_extra_struct_fields.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
extra field(s) ["bonus"] in construction of `Orbit`
    Diagnostic severity: error
Begin snippet for extra_struct_fields.gcl starting at line 4, column 1

snippet line 4: }
snippet line 5: node o: Orbit = Orbit { altitude: 400.0 km, speed: 7.6 km/s, bonus: 1.0};
    label at line 5, columns 17 to 72: unexpected fields
diagnostic help: only fields declared in the struct type are allowed
diagnostic code: graphcal::S005
