crates/graphcal-eval/tests/snapshots/error_snapshots__error_fin_key_out_of_bounds.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
fin_key: 7 out of bounds for Fin(3)
