crates/graphcal-eval/tests/snapshots/error_snapshots__error_floor_key_below_range.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
floor_key: no coordinate of `TimeStep` is at or below the target
